Made the background more responsive, and changed the directory of the github url to link to where I wanted it to

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <p>Outlook</p>
                     </li>
                     <li>
-                        <a href="https://github.com/"><img src="images/github.png"></a>
+                        <a href="https://github.com/Artistro/"><img src="images/github.png"></a>
                         <p>GitHub</p>
                     </li>
                     <li>
